# MCP_tts_server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  old_functions.py  pyproject.toml  requirements.txt  simple_tts_mcp.py  speak.py  test_speak.py  tts_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md
